--- a/index.html
+++ b/index.html
@@ -94,21 +94,21 @@
                 <tr>
                   <td width="20px">Nama</td>
                   <td>:</td>
-                  <td width="300px"></td>
+                  <td width="300px">Niken Rahayu Sepa</td>
                 <tr>
                   <td>Asal</td>
                   <td>:</td>
-                  <td></td>
+                  <td>Bogor</td>
                 </tr>
                 <tr>
                   <td>Status</td>
                   <td>:</td>
-                  <td></td>
+                  <td>Ibu Rumah Tangga</td>
                 </tr>
                 <tr>
                   <td>Hobi</td>
                   <td>:</td>
-                  <td></td>
+                  <td>Dengerin Musik</td>
                 </tr>
               </table>
             <td>
@@ -210,7 +210,8 @@
             <td align="center">
               <img src="icons/default.png">
               <h2>Niken Rahayu Sepa</h2>
-              <p>Saya Ibu Rumah Tangga dan sekaligus bekerja dibidang pendidikan. Menurut saya program dari Kominfo ini sangat .</p>
+              <p>Saya Ibu Rumah Tangga sekaligus bekerja dibidang kependidikan, sangat tertarik  dengan ilmu teknologi informasi dan design animasi. Menurut saya program dari kominfo ini sangat bermanfaat dan diharapkan dapat menjadi dasar bagi saya untuk dapat mengembangkan kebutuhan pembelajaran baik untuk anak-anak ataupun lingkungan. Pelatihan Pemrograman web, menjadi tantangan tersendiri bagi saya dikarenakan ilmunya tidak linear dengan basic pendidikan yang saya miliki. 
+              </p>
             </td>
           </tr>
           <tr>
@@ -282,6 +283,12 @@
     </div>
   </div>
   </div>
+  <footer>
+    <div class="container">
+        <h4>TEAM 18</h4>
+        <p>Laman Profil Team 18.</p>
+      </div>
+  </footer>
 </body>
 
 </html>
