--- a/index.html
+++ b/index.html
@@ -283,9 +283,10 @@
     </div>
   </div>
   </div>
+  <!-- bagian footer (Niken) -->
   <footer>
     <div class="container">
-        <h4>TEAM 18</h4>
+      <h4>TEAM 18</>
         <p>Laman Profil Team 18.</p>
       </div>
   </footer>
